--- a/main.html
+++ b/main.html
@@ -19,7 +19,8 @@
 <button type="button" class="btn btn-light" id="#button-7">Button-7</button>
 <button type="button" class="btn btn-link" id="#button-8"><u>Button-8</u></button>
 	
-
+<script type="text/javascript" src="./script.js">
+</script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
