--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-<button type="button" class="btn btn-primary" id="#button-1">Button-1</button>
-<button type="button" class="btn btn-outline-secondary" id="#button-2">Button-2</button>
-<button type="button" class="btn btn-success btn-lg" id="#button-3">Button-3</button>
-<button type="button" class="btn btn-danger btn-sm" id="#button-4">Button-4</button>
-<button type="button" class="btn btn-warning btn-lg btn-block" id="#button-5">Button-5</button>
-<button type="button" class="btn btn-info" id="#button-6">Button-6</button>
-<button type="button" class="btn btn-light" id="#button-7">Button-7</button>
-<button type="button" class="btn btn-link" id="#button-8"><u>Button-8</u></button>
+<button type="button" class="btn btn-primary" id="button-1">Button-1</button>
+<button type="button" class="btn btn-outline-secondary" id="button-2">Button-2</button>
+<button type="button" class="btn btn-success btn-lg" id="button-3">Button-3</button>
+<button type="button" class="btn btn-danger btn-sm" id="button-4">Button-4</button>
+<button type="button" class="btn btn-warning btn-lg btn-block" id="button-5">Button-5</button>
+<button type="button" class="btn btn-info" id="button-6">Button-6</button>
+<button type="button" class="btn btn-light" id="button-7">Button-7</button>
+<button type="button" class="btn btn-link" id="button-8"><u>Button-8</u></button>
 	
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
